Version 0.7.3
Date: soon
    Features:
        - Add the option to specify how many beacons, with what modules, should be applied on a per-building-type
          basis, in addition to the global and per-recipe-row settings.
    Bugfixes:
        - Fix PageSearch scrollbar not working.
    Internal changes:
        - Finish the namespace rename from YAFC to Yafc.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.2
Date: June 23rd 2024
    Features:
        - Add several right-click and keyboard shortcuts, notably Enter/Return to close most dialogs.
        - Add UI rebuilding itself on resize.
        - When opening the main window, use the same size it was when it was last closed.
        - Use calculated width for first column of Summary page.
    Bugfixes:
        - Fix that some pages couldn't be deleted.
        - Fix that returning to the Welcome Screen could break the panels in the main window.
        - Make horizontal scrollbar clickable/draggable.
        - Scroll down/up exactly one page with page down/up keys
        - Fix saving and loading errors with legacy production summaries.
        - YAFC no longer shows the paths of the releaser in stack traces.
    Internal changes:
        - Initial window size is now separate from the minimal window size.
----------------------------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: June 12th 2024
    Features:
        - Allow configuring the size of icons that have backgrounds, since the icon may cover the entire
          background area.
        - Update the detection of special recipes and items, to detect stacking from Deadlock's Beltboxes, caging
          from Pyanodon, and pressurization from Pressurized Fluids.
          Also detect cases where one direction is required, (e.g. Some Nullius science packs are manufactured in